Fire startExtSubset and endExtSubset under the same conditions (XERCESC-1828)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@709149 13f79535-47bb-0310-9956-ffa450edef68